--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -18,6 +18,7 @@
     <ClCompile Include="src\panels\questions_panel.cpp" />
     <ClCompile Include="src\panels\section_info_panel.cpp" />
     <ClCompile Include="src\panels\test_info_panel.cpp" />
+    <ClCompile Include="src\others\selectable_buttons.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -28,5 +29,6 @@
     <ClInclude Include="src\panels\questions_panel.h" />
     <ClInclude Include="src\panels\section_info_panel.h" />
     <ClInclude Include="src\panels\test_info_panel.h" />
+    <ClInclude Include="src\others\selectable_buttons.h" />
   </ItemGroup>
 </Project>
