add custom button class to handle question numbers

--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="src\panels\section_info_panel.cpp" />
     <ClCompile Include="src\panels\test_info_panel.cpp" />
     <ClCompile Include="src\others\selectable_buttons.cpp" />
+    <ClCompile Include="src\others\question_number_button.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -30,5 +31,6 @@
     <ClInclude Include="src\panels\section_info_panel.h" />
     <ClInclude Include="src\panels\test_info_panel.h" />
     <ClInclude Include="src\others\selectable_buttons.h" />
+    <ClInclude Include="src\others\question_number_button.h" />
   </ItemGroup>
 </Project>
