--- a/Computer Based Test Emulator.vcxproj
+++ b/Computer Based Test Emulator.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="src\app.cpp" />
     <ClCompile Include="src\frames\exam_frame.cpp" />
     <ClCompile Include="src\frames\main_frame.cpp" />
+    <ClCompile Include="src\others\basic_csv_functions.cpp" />
     <ClCompile Include="src\others\question_number_button.cpp" />
     <ClCompile Include="src\others\selectable_buttons.cpp" />
     <ClCompile Include="src\panels\questions_navigation_panel.cpp" />
@@ -44,6 +45,7 @@
     <ClInclude Include="src\data structures\test_starting_info.h" />
     <ClInclude Include="src\frames\exam_frame.h" />
     <ClInclude Include="src\frames\main_frame.h" />
+    <ClInclude Include="src\others\basic_csv_functions.h" />
     <ClInclude Include="src\others\question_number_button.h" />
     <ClInclude Include="src\others\selectable_buttons.h" />
     <ClInclude Include="src\panels\questions_navigation_panel.h" />
