--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -20,6 +20,7 @@
     <ClCompile Include="src\panels\test_info_panel.cpp" />
     <ClCompile Include="src\others\selectable_buttons.cpp" />
     <ClCompile Include="src\others\question_number_button.cpp" />
+    <ClCompile Include="src\others\basic_csv_functions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -32,5 +33,6 @@
     <ClInclude Include="src\panels\test_info_panel.h" />
     <ClInclude Include="src\others\selectable_buttons.h" />
     <ClInclude Include="src\others\question_number_button.h" />
+    <ClInclude Include="src\others\basic_csv_functions.h" />
   </ItemGroup>
 </Project>
