--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -22,6 +22,7 @@
     <ClCompile Include="src\others\question_number_button.cpp" />
     <ClCompile Include="src\others\basic_csv_functions.cpp" />
     <ClCompile Include="src\others\custom_buttons.cpp" />
+    <ClCompile Include="src\others\text_input_window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -36,5 +37,6 @@
     <ClInclude Include="src\others\question_number_button.h" />
     <ClInclude Include="src\others\basic_csv_functions.h" />
     <ClInclude Include="src\others\custom_buttons.h" />
+    <ClInclude Include="src\others\text_input_window.h" />
   </ItemGroup>
 </Project>
