--- a/Computer Based Test Emulator.vcxproj
+++ b/Computer Based Test Emulator.vcxproj
@@ -29,6 +29,7 @@
     <None Include="src\README.md" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\others\html_releated_functions.cpp" />
     <ClCompile Include="src\app.cpp" />
     <ClCompile Include="src\frames\exam_frame.cpp" />
     <ClCompile Include="src\frames\main_frame.cpp" />
@@ -43,6 +44,7 @@
     <ClCompile Include="src\panels\test_info_panel.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\others\html_releated_functions.h" />
     <ClInclude Include="src\app.h" />
     <ClInclude Include="src\data structures\test_starting_info.h" />
     <ClInclude Include="src\frames\exam_frame.h" />
