--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClCompile Include="src\others\basic_csv_functions.cpp" />
     <ClCompile Include="src\others\custom_buttons.cpp" />
     <ClCompile Include="src\others\text_input_window.cpp" />
+    <ClCompile Include="src\others\html_releated_functions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -38,5 +39,6 @@
     <ClInclude Include="src\others\basic_csv_functions.h" />
     <ClInclude Include="src\others\custom_buttons.h" />
     <ClInclude Include="src\others\text_input_window.h" />
+    <ClInclude Include="src\others\html_releated_functions.h" />
   </ItemGroup>
 </Project>
