--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClCompile Include="src\others\custom_buttons.cpp" />
     <ClCompile Include="src\others\text_input_window.cpp" />
     <ClCompile Include="src\others\html_releated_functions.cpp" />
+    <ClCompile Include="src\panels\progress_bar.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -40,5 +41,6 @@
     <ClInclude Include="src\others\custom_buttons.h" />
     <ClInclude Include="src\others\text_input_window.h" />
     <ClInclude Include="src\others\html_releated_functions.h" />
+    <ClInclude Include="src\panels\progress_bar.h" />
   </ItemGroup>
 </Project>
