--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -28,6 +28,7 @@
     <ClCompile Include="src\frames\create_test_frame.cpp" />
     <ClCompile Include="src\panels\test_creation_from_questions_list_panel.cpp" />
     <ClCompile Include="src\panels\test_creation_from_questions_options_panel.cpp" />
+    <ClCompile Include="src\others\basic_functions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -48,5 +49,6 @@
     <ClInclude Include="src\frames\create_test_frame.h" />
     <ClInclude Include="src\panels\test_creation_from_questions_list_panel.h" />
     <ClInclude Include="src\panels\test_creation_from_questions_options_panel.h" />
+    <ClInclude Include="src\others\basic_functions.h" />
   </ItemGroup>
 </Project>
