--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -50,5 +50,15 @@
     <ClInclude Include="src\panels\test_creation_from_questions_list_panel.h" />
     <ClInclude Include="src\panels\test_creation_from_questions_options_panel.h" />
     <ClInclude Include="src\others\basic_functions.h" />
+    <ClInclude Include="src\constants\graphics\app_icons.h" />
+    <ClInclude Include="src\constants\graphics\buttons_icon.h" />
+    <ClInclude Include="src\constants\graphics\frame_icons.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Computer Based Test Emulator.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="resources\graphics\icons\app.ico" />
   </ItemGroup>
 </Project>
