--- a/Computer Based Test Emulator.vcxproj.filters
+++ b/Computer Based Test Emulator.vcxproj.filters
@@ -29,6 +29,8 @@
     <ClCompile Include="src\panels\test_creation_from_questions_list_panel.cpp" />
     <ClCompile Include="src\panels\test_creation_from_questions_options_panel.cpp" />
     <ClCompile Include="src\others\basic_functions.cpp" />
+    <ClCompile Include="src\frames\create_result_frame.cpp" />
+    <ClCompile Include="src\panels\result_creation_list_panel.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\app.h" />
@@ -54,6 +56,8 @@
     <ClInclude Include="src\constants\graphics\buttons_icon.h" />
     <ClInclude Include="src\constants\graphics\frame_icons.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="src\frames\create_result_frame.h" />
+    <ClInclude Include="src\panels\result_creation_list_panel.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Computer Based Test Emulator.rc" />
